<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/sample_main_layout">

    <!--com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" /-->
    <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />
    <Switch
        android:id="@+id/subscribe_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="subscribe_function"
        android:enabled="false"
        android:text="@string/subscribe_button_text" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="update_function"
        android:enabled="false"
        android:text="@string/update_button_text" />

    <Button
        android:id="@+id/get_unfriends_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="get_unfriends_list_function"
        android:enabled="false"
        android:text="@string/get_unfriends_button_text" />

    <Switch
        android:id="@+id/should_schedule_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="set_schedule_function"
        android:enabled="false"
        android:text="@string/should_schedule_text" />

    <TextView
        android:id="@+id/schedule_time_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/schedule_time_text_text" />

    <EditText
        android:id="@+id/fb_account_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="50"
        android:inputType="text"
        android:text="@string/fb_account_text_text" />

    <fragment
        android:id="@+id/log_fragment"
        android:name="il.co.itzikm.common.logger.LogFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/sample_output"
        style="@style/Widget.SampleMessage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="16dp"
        android:onClick="set_fb_account_function"
        android:text="@string/intro_message" />
</LinearLayout>
